[gd_scene load_steps=6 format=2]

[ext_resource path="res://StateMachine/State.gd" type="Script" id=1]
[ext_resource path="res://Scenes/InteractiveObjects/Collectables/States/CollectableFollowState.gd" type="Script" id=2]
[ext_resource path="res://Scenes/InteractiveObjects/Collectables/States/CollectablSpawnState.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Behaviours/CollectableBehaviour.gd" type="Script" id=5]

[node name="CollectableBehaviour" type="Node2D"]
script = ExtResource( 5 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="SpawnDurationTimer" type="Timer" parent="StateMachine/Spawn"]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Follow" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Collect" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]

[node name="FollowArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]

[node name="CollectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
[connection signal="body_entered" from="FollowArea" to="." method="_on_FollowArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
